# vcpkgdemo

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  hello.c  hello.h
src/: CMakeLists.txt  main.c
